@@ -1,3 +1,7 @@
+version 2.5.11
+--------------
+Thanks to dcb314 at sourceforge for bug report.
+
 version 2.5.10
 --------------
 Thanks to Jim Avera once again for bug report.
